# org-operations-agents

./: .gitignore  CONTRIBUTING.md  README.md  org-ops-start.cmd
output/: README.md
products/org-os/: CHANGELOG.md  CONSUMER.md  README.md  RELEASE.md  pyproject.toml
products/org-os/src/org_os/: __init__.py  asana_client.py  backfill.py  cli.py  constants.py  doctor.py  env.py  queue.py  state_machine.py  syscall.py
products/org-os/tests/: __init__.py  fake_http.py  test_asana_client_http.py  test_env.py  test_helpers.py  test_queue.py  test_syscall.py
skills/: README.md
tools/: agent_registry_util.py  aggregate_delivery_kpi.py  aggregate_epic_retrospective.py  approval_helper.py  asana_ops_dashboard.py  asana_ops_poller.py  asana_ops_runner.py  asana_ops_sessions.py  asana_webhook_handler.py  auto_intake_runner.py  backfill_epic_os_state.py  backfill_subtask_project_membership.py  bypass_planning_gate.py  check_epic_audit_gate.py  check_milestone_readiness.py  check_new_department.py  check_new_skill.py  check_planning_approval_gate.py  check_pm_review_gate.py  check_retrospective_intake_gate.py  check_task_retrospective.py  check_workflow_suspend.py  complete_epic_os_state.py  create_manual_intake_task.py  create_milestone_followup_subtasks.py  create_planning_approval_gate.py  create_pm_review_gate.py  create_retrospective_intake_gate.py  create_retrospective_intake_tasks.py  cursor_epic_dispatch.py  cursor_intake_dispatch.py  cursor_sdk_kick.py  cursor_worker_dispatch.py  dispatch_prompt_util.py  emit_milestone_effectiveness_report.py  epic_resolve.py  (+72 more)
(+688 files in other folders)
